--- a/index.html
+++ b/index.html
@@ -79,18 +79,27 @@
       <a href="Results.html">Results</a>
     </nav>
   </header>
+ <main>
+    <section>
+      <h2>About the project</h2>
+      <p>The author Vladimir Nabokov is..... </p>
+    </section>
 
-  <main>
     <section>
       <h2>Project goal</h2>
       <p>To analyse information present in Wikidata about Vladimir Nabokov, identify gaps within it and propose possible enrichments.</p>
     </section>
 
     <section>
+      <h2>Tools</h2>
+      <p>The main tools used were the Wikidata SPARQL query service, ChatGPT and Gemini, and external sources, such as Wikipedia. </p>
+    </section>
+   
+    <section>
       <h2>Group Members</h2>
+      <p>Cristiana Ruxandra Negrila</p>
+      <p>Olesia Vartanian</p>
       <p>Renata X</p>
-      <p>Olesya X</p>
-      <p>Nina X</p>
     </section>
   </main>
 
