--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <h1>Enrichment of Vladimir Nabokov Wikidata</h1>
     <nav>
       <a href="index.html">Main Page</a>
-      <a href="Haru_page.html">Renata's part</a>
-      <a href="Olga_page.html">Olesya's part</a>
-      <a href="Olga_page.html">Nina's part</a>
+      <a href="Renata_page.html">Renata's part</a>
+      <a href="Olesia_page.html">Olesia's part</a>
+      <a href="Nina_page.html">Cristiana's part</a>
       <a href="Results.html">Results</a>
     </nav>
   </header>
@@ -99,7 +99,7 @@
       <h2>Group Members</h2>
       <p>Cristiana Ruxandra Negrila</p>
       <p>Olesia Vartanian</p>
-      <p>Renata X</p>
+      <p>Renata Safiullina</p>
     </section>
   </main>
 
